fix: scrollbar shift and customisze scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,17 +9,32 @@
   --error: red;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Playfair Display', serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+::-webkit-scrollbar {
+  width: 8px; 
+}
+
+::-webkit-scrollbar-track {
+  background: var(--dark-gray);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--lilac);
+  border-radius: 10px;
 }
 
 ul,
